# sample-mlops-bestpractices

./: .gitignore  .pre-commit-config.yaml
sagemaker-automated-drift-and-trend-monitoring/: .env.example  README.md  main.py  pyproject.toml
sagemaker-automated-drift-and-trend-monitoring/cloudformation/: README.md  cleanup-main-resources.sh  cleanup-stack.sh  delete-main-stack.sh  delete_stack.sh  deploy-drift-monitoring.sh  deploy-main-stack.sh  deploy-stack.sh  drift-monitoring-infra.yaml  force-delete-stack.sh  sagemaker-mlflow-setup.yaml
sagemaker-automated-drift-and-trend-monitoring/data/: README.md  download_kaggle_dataset.py  generate_datasets.py
sagemaker-automated-drift-and-trend-monitoring/docs/: ARCHITECTURE_STEPS.md  VERSION_MANAGEMENT.md
sagemaker-automated-drift-and-trend-monitoring/notebooks/: 1_training_pipeline.ipynb  2_deployment.ipynb  3_inference_monitoring.ipynb  4_governance_dashboard.ipynb  4_optional_version_validation.ipynb  5_optional_version_validation.ipynb  6_optional_cleanup.ipynb  7_optional_shap_explainability.ipynb
sagemaker-automated-drift-and-trend-monitoring/scripts/: README.md  _read_config.sh  delete_infrastructure.sh  deploy_lambda_container.sh  redeploy_with_existing.py  scrub-account-numbers.sh  scrub_account_ids.py
sagemaker-automated-drift-and-trend-monitoring/tests/: test_config_cleanup.py  test_create_athena_tables_columns.py  test_create_athena_tables_drop.py  test_create_athena_tables_flags.py  test_create_athena_tables_main.py  test_create_athena_tables_maintenance.py  test_dataset_schema_yaml.py  test_deploy_endpoint.py  test_download_kaggle_dataset.py  test_lambda_drift_monitor_schema.py  test_manage_drift_lambda.py  test_pipeline_bundling.py  test_scheduled_job_column_generation.py  test_schema_accessors.py  test_schema_error_handling.py  test_seed_athena_tables_cast.py  test_seed_athena_tables_columns.py  test_target_column_defaults.py  test_validate_dataset_schema_header.py  test_validate_dataset_schema_types.py
(+51 files in other folders)
